--- a/src/makefile
+++ b/src/makefile
@@ -5,17 +5,20 @@ LDFLAGS =
 CFLAGS += -g # debug
 # CFLAGS += -O3 # release
 
-OBJECTS = $(patsubst %.c, %.o, $(wildcard *.c))
+OBJECTS = $(patsubst %.c, ../build/%.o, $(wildcard *.c))
 
-all: jlisp
+all: ../jlisp
 
 clean:
-	rm -f jlisp *.o
+	rm -f jlisp ../build/*.o
 
 tags:
 	etags `find . -name "*.h" -o -name "*.c"`
 
-jlisp: $(OBJECTS)
+../build/%.o: %.c
+	$(CC) $(CFLAGS) -c $^ -o $@
+
+../jlisp: $(OBJECTS)
 	$(CC) $^ $(LDFLAGS) -o $@
 
 .PHONY: all clean tags
